# statsdeck-mlb-mcp

./: .env.example  .gitignore  README.md  claude_desktop_config.example.json  pyproject.toml  railway.toml  requirements.txt
analytics/: __init__.py  config.py  instrument.py  migrate.py  recorder.py  schema.sql
cache/: __init__.py
scripts/: analytics_queries.sql  export_usage.py  run_analytics.py
server/: main.py  oauth.py
sources/: mlb_stats.py  player_resolver.py  profile.py  savant.py
tests/: test_data_layer.py  test_player_resolver.py  test_server.py  test_usage_analytics.py
