[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlb-fantasy-mcp"
version = "0.1.0"
description = "MCP server providing live MLB data for fantasy baseball"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pybaseball>=2.2.7",
    "httpx>=0.27.0",
    "diskcache>=5.6.3",
    "python-dateutil>=2.9.0",
    "pydantic>=2.0.0",
    # HTTP transport (already a dep of mcp, pinned here for Railway clarity)
    "uvicorn>=0.27.0",
    "starlette>=0.36.0",
    # Optional Redis cache backend — install is harmless when REDIS_URL isn't set
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
mlb-mcp = "server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["server", "sources", "cache"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
